<resources>
    <string name="app_name">Tugas Dicoding</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_map">Maps</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_dynamic">Dynamic Feature</string>


    <string name="title_activity_detail_home">DetailHomeActivity</string>
    <string name="no_data">Empty data </string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="title_chat">Module Title</string>
    <string name="title_maps">Maps</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="email_not_valid">Format email tidak valid!</string>
    <string name="password_not_valid">Password kurang dari 6 karakter!</string>
    <string name="password_not_same">Password tidak sama!</string>
    <string name="title_favorite">Favorite</string>

    <string name="continus">Cek connection colokan kabel data ke HP</string>
    <string name="power_connected">Power connected!</string>
    <string name="power_disconnected">Power disconnected!</string>


</resources>
